bulb off/on mini project

--- a/medium/09-turn-OffOn-lampe/index.html
+++ b/medium/09-turn-OffOn-lampe/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>template</title>
+    <title>Bulb mini project</title>
 </head>
 <body>
+
+<img src="pics/bulboff.gif" id="bulb" alt="bulb Off">
+   <button onclick="turnOffOrOnBulb()">Turn On/Off</button>
     <script src="script.js"></script>
 </body>
 </html>
