--- a/medium/10-exercise-form-validation/index.html
+++ b/medium/10-exercise-form-validation/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>form validation</title>
-  </head>
-  <body style="width: 100%">
-    <style>
-      body {
+</head>
+<body style="width: 100%">
+<style>
+    body {
         background-color: green;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         text-transform: capitalize;
-      }
-      input {
+    }
+
+    input {
         width: 250px;
         height: 40px;
         display: block;
         margin: 10px;
         border: 0.5px solid #eee;
+        outline: none;
         background-color: #f3f3f3;
-        padding: 2px;
+        padding: 2px 6px;
         text-decoration: none;
-      }
+        text-transform: capitalize;
+    }
 
-      input:last-of-type {
+    input:last-of-type {
         background-color: greenyellow;
         cursor: pointer;
-      }
+    }
 
-      .container {
+    .container {
         width: 400px;
         height: 400px;
         display: flex;
@@ -40,25 +43,25 @@
         justify-content: center;
         align-items: center;
         background-color: white;
-      }
-    </style>
+    }
+</style>
 
-    <div class="container">
-      <form action="" class="from">
+<div class="container">
+    <form action="" class="from">
         <input
-          type="text"
-          id="userName"
-          placeholder="username"
+                type="text"
+                id="userName"
+                placeholder="username"
         />
         <input
-          type="text"
-          id="password"
-          placeholder="password"
+                type="text"
+                id="password"
+                placeholder="password"
         />
-        <input type="submit" value="register" />
-      </form>
-    </div>
+        <input type="button" onclick="SubmitedForm()" value="register"/>
+    </form>
+</div>
 
-    <script src="script.js"></script>
-  </body>
+<script src="script.js"></script>
+</body>
 </html>
